Added a first term to play with the semantic model

--- a/glossary/index.html
+++ b/glossary/index.html
@@ -78,10 +78,17 @@
     <h2>The glossary</h2>
     <table>
       <tr>
-        <td><b>Term</b></td><td><b>Definition<b></td>
+        <td><b>Term</b></td><td><b>Definition<b></td><td><b>Ontology IRI<b></td>
       </tr>
       <tr>
-        <td>xxx</td><td>yyy</td>
+        <td>Database</td>
+        <td>A digital data archive typically based around a relational model but sometimes using an object-oriented,key-value,  tree or graph-based model.</td>
+        <td><a href="http://edamontology.org/data_0581">EDAM:data_0581</a></td>
+      </tr>
+      <tr>
+        <td>xxx</td>
+        <td>yyy</td>
+        <td>xxx</td>
       </tr>
     </table>
   </section>
