Added funding details

--- a/glossary/index.html
+++ b/glossary/index.html
@@ -95,7 +95,7 @@
   <section class='informative'>
     <h2>Funding</h2>
     <p>
-      ....
+      This work received funding from the European Union’s Horizon 2020 research and innovation programme via NanoRIGO Project under grant agreement No 814530, RiskGONE Project under grant agreement No 814425, and via Gov4Nano under grant agreement No 814401.
     </p>
   </section>
 </body>
