More content migratated, including the footnotes

--- a/glossary/index.html
+++ b/glossary/index.html
@@ -27,8 +27,8 @@
 
           // editors (optional)
           editors:  [
-             { name: "Egon Willighagen", url: "",
-                company: "Maastricht University", companyURL: "https://www.maastrichtuniversity.nl/" },
+             { name: "Iseult Lynch", url: "",
+                company: "", companyURL: "" },
           ],
           authors:  [
              { name: "Antreas Afantitis",
@@ -42,6 +42,8 @@
              { name: "Nina Jeliazkova",
                 company: "IdeaConsult", companyURL: "" },
              { name: "Laurent Winckers",
+                company: "Maastricht University", companyURL: "https://www.maastrichtuniversity.nl/" },
+             { name: "Egon Willighagen", url: "",
                 company: "Maastricht University", companyURL: "https://www.maastrichtuniversity.nl/" },
           ],
           
@@ -70,18 +72,18 @@
       The <span property="rdfs:label">Joint glossary of key terms related to data management and knowledge infrastructure / portal / platform</span> summarises the activities of the Core Group on Data Management organized jointly by the three projects funded under the H2020 NMBP-13 call: Gov4Nano, NANORIGO and RiskGONE. These activities reported here took place during the period January-June 2020 as part of the ongoing activities of the data management core group, and is one of the two parallel activities that this core group focussed on over this period (the other activity will be reported separately in Joint Milestone (JM) 2 on prioritisation of databases to be made interoperable).
     </p>
     <p>
-      A key stumbling block to within and across-project collaboration is unintentional or unacknowledged differences in understanding of the meaning of key terminology, which can arise due to language barriers or as a result of slight disciplinary differences.  Formal ontologies, such as eNanoMapper ontology1 can help here, as these are directed towards harmonisation and organisation of dataset as well as supporting day-to-day use of terms.  Similarly, standardisation organisations such as ISO have definitions for a lot of terminology related to nanotechnologies and nanomaterials2, and consistent use of this is essential, but not always applied in practice.
+      A key stumbling block to within and across-project collaboration is unintentional or unacknowledged differences in understanding of the meaning of key terminology, which can arise due to language barriers or as a result of slight disciplinary differences.  Formal ontologies, such as <a href="https://enanomapper.net/ontology">eNanoMapper ontology</a> can help here, as these are directed towards harmonisation and organisation of dataset as well as supporting day-to-day use of terms.  Similarly, standardisation organisations such as <a href="https://www.iso.org/obp/ui/#iso:std:iso:tr:18401:ed-1:v1:en ">ISO have definitions</a> for a lot of terminology related to nanotechnologies and nanomaterials, and consistent use of this is essential, but not always applied in practice.
     </p>
     <p>
-      To overcome the challenge of consistent use of terminology, several projects have established a glossary of terms for use within the project.  For example, the FP7 NanoREG project developed and published the 'NANoREG Harmonised Terminology', aligned as far as possible with already existing definition text(s), thus avoiding the creation of new and unwelcome information. 1  The list includes terms with international regulatory relevance, such as those defined at OECD level, as well as terms that have a specific meaning and use under REACH legislation2.
+      To overcome the challenge of consistent use of terminology, several projects have established a glossary of terms for use within the project.  For example, the FP7 NanoREG project developed and published the 'NANoREG Harmonised Terminology', aligned as far as possible with already <a href="https://ec.europa.eu/jrc/en/publication/nanoreg-harmonised-terminology-environmental-health-and-safety-assessment-nanomaterials ">existing definition text(s)</a>, thus avoiding the creation of new and unwelcome information.  The list includes terms with international regulatory relevance, such as those defined at OECD level, as well as terms that have a specific meaning and use under <a href="https://echa.europa.eu/regulations/reach/legislation ">REACH legislation</a>.
     </p>
     <p>
       In order to support collaboration and consensus across the three NMPB-13 projects, and to facilitate the work of the 4 “Core Groups” spanning the Risk Governance Council and Framework, the Nano-Risk Governance Portal – Tools and Instruments, Stakeholder Involvement and ourselves as the Data Management Core group, it was agreed that we would establish a cross-project Glossary of terms to provide clarity on several important issues, including:
       <ul>
-        <li>What we mean by toxicology, hazard, exposure etc. building on existing glossaries1;</li>
+        <li>What we mean by toxicology, hazard, exposure etc. building on <a href="Duffus J, Templeton DM, Schwenk M, Comprehensive Glossary of Terms Used in Toxicology. 2017, https://doi.org/10.1039/9781782623724 ">existing glossaries</a>;</li>
         <li>Differences between the range of data management solutions including databases, data warehouses, data stores etc.;</li>
         <li>Introduce new terms where needed such as cloud-platform, cloud-based solution as intended within these projects as a means to support the Nano Risk Governance Council;</li>
-        <li>New modelling approaches and terminologies related to approaches such as adverse outcome pathways1 and safe-by-design, as examples of emerging areas of growth.</li>
+        <li>New modelling approaches and terminologies related to approaches such as <a href="https://github.com/DataSciBurgoon/aop-ontology ">adverse outcome pathways</a> and safe-by-design, as examples of emerging areas of growth.</li>
       </ul>
     </p>
   </section>
@@ -91,28 +93,60 @@
       Based on experience from previous projects, the data management core group agreed that an excel-based system with a sheet per Core group would be a good starting point.  This document has been established in the Teams folder for the Core Groups, and each core group is free to add terms to it.
     </p>
     <p>
-      As part of the Data Management Core group activity, we identified existing ontologies or relevant glossaries that had defined key terms already, in order to avoid unnecessary duplication of effort.  For example, the EDAM ontology1 for Bioinformatics operations, types of data, data identifiers, data formats, and topics was identified as a potential source of existing definitions for data management terms such as data warehousing, data stewardship and governance etc.
+      As part of the Data Management Core group activity, we identified existing ontologies or relevant glossaries that had defined key terms already, in order to avoid unnecessary duplication of effort.  For example, the <a href="http://edamontology.org/page">EDAM ontology</a> for Bioinformatics operations, types of data, data identifiers, data formats, and topics was identified as a potential source of existing definitions for data management terms such as data warehousing, data stewardship and governance etc.
     </p>
     <p>
-      In addition to the aforementioned NanoREG Harmonised terminology, we have also aligned with the efforts in the H2020 GRACIOUS project, who have established a Wiki approach to support harmonisation of terminology for IATA, grouping and read-across1.  This effort builds upon activities from the H2020 project NanoCommons and others.
+      In addition to the aforementioned NanoREG Harmonised terminology, we have also aligned with the efforts in the H2020 GRACIOUS project, who have established <a href="https://www.h2020gracious.eu/library/online-wiki ">a Wiki approach</a> to support harmonisation of terminology for IATA, grouping and read-across.  This effort builds upon activities from the H2020 project NanoCommons and others.
     </p>
     <p>
       In June 2020, as part of a growing awareness that there are a multitude of ontology activities going on independently across the NanoSafety Cluster, NanoCommons suggested the implementation of a Task Force to integrate the efforts and align them, and address the issues with the structure of eNanoMapper ontology that had driven GRACIOUS, the US NIKC and other projects to develop their own glossaries and approaches separately.  The Core Data Management Group will play a central role in this activity and will support the integration of the harmonised terminology from the Core Groups into the revised eNanoMapper ontology.
     </p>
   </section>
   <section class='informative'>
-    <h2>XXXX</h2>
+    <h2>Outcomes</h2>
     <p>
+      The NMBP-13 projects Glossary of Terms is Living document, that will continue to be updated and evolved by the Core groups, the WPs and the partners, with the final goal of integration of the terms into the revised and extended eNanoMapper-NanoCommons ontology.
     </p>
     <p>
+      The <a href="https://teams.microsoft.com/l/file/3ED241DB-E3D8-4698-AB6E-112E691A95A4?tenantId=220534bf-8803-473e-b063-923d72bcef2a&fileType=xlsx&objectUrl=https%3A%2F%2Fnilu365.sharepoint.com%2Fsites%2FProject-NMBP13%2FShared%20Documents%2FGeneral%2FGlossary%20of%20key%20terms%2FGlossary%20of%20key%20terms.xlsx&baseUrl=https%3A%2F%2Fnilu365.sharepoint.com%2Fsites%2FProject-NMBP13&serviceName=teams&threadId=19:0d9c5a650fe643f2ab02f7d01959b320@thread.skype&groupId=59d85f53-db67-4347-82cd-bd09db845ca2">Excel-based Glossary</a> is available and was shared with the other Core Groups at the joint meeting on 18th May 2020.  To start off the process of filling it, the Data management core group pre-filled examples of general terms relating to each of the cores, and key terms that had been identified by NanoRIGO’s work on database harmonisation which identified toxicology, hazard and several other terms as being potentially mis-used or mis-interpreted.  Links to existing ontology terms and definitions are also included, as well as link to key references and resources, such as the Harmonised Glossary of Terms for Toxicology, the JRC Harmonised terms etc.
     </p>
     <p>
+      This spreadsheet is converted into the below "The glossary" section.
     </p>
     <p>
+      Figure 1 shows a screen shot of the data management core group initial terms, their definitions and the link to the existing ontology term.
+    </p>
+    <p>
+      <img src=""></img><br />
+      <b>Figure 1</a>:  Screenshot of the initial Data management core group Glossary of terms, including the link to the existing Ontology term. 
     </p>
   </section>
-  <section class='normative'>
+  <section class='informative'>
+    <h2>How to extend the Glossary</h2>
+    <p>
+      Core groups are initially invited to add their terms, and then the data management core group will identify the relevant ontology term, and confirm that the associated definition meets the needs of the Core group.  
+    </p>
+    <p>
+      WP leaders from across the 3 projects will then be invited to access the Glossary also to check for terms in their day-to-day activities and to add additional terms as needed.  The goal is not to add every single term, but to focus on those terms where there is potential for confusion / mis-use or misunderstanding as to the specific meaning of the term in the specific project context.
+    </p>
+  </section>
+  <section class='informative'>
+    <h2>How to use the Glossary</h2>
+    <p>
+      The Glossary supports harmonisation of terminology to aid discussions within and between the Core Groups. In addition, harmonisation of terminology results in a better understanding of the content which is talked and discussed about. This better understanding of the semantics within the project trickles down to ensure <b>consistent and harmonised deliverable reports and project outputs</b> and improves their overall quality. A key step in the internal review of all deliverables will be cross-checking them for consistency with the terminology from the glossary – this can be easily achieved through addition of the key terms and their definitions alongside the list of abbreviations in all deliverable reports.
+    </p>
+    <p>
+      While it was decided that the Glossary would be Excel-based, the associated ontologies will be used for harmonised annotation of project datasets, both literature curated and generated within the projects.
+    </p>
+    <p>
+      Furthermore, semantics, ontologies and glossaries will be used consistently by the 3 projects as these tools aid individuals, the team and the projects.  This approach will be useful outside the field of toxicology as well. Whereas we see a surge in the use of semantics, applying these methodologies should be implemented more often to make more people familiar with the concepts.  Therewithal, the use of the Glossary showed to be beneficial to support collaboration and consensus across the three NMPB-13 projects.
+    </p>
+  </section>
+  <section class='informative'>
     <h2>The glossary</h2>
+    <p>
+      This document does not replace the Excel spreadsheet glossary, but just a translation of it. The <a href="https://teams.microsoft.com/l/file/3ED241DB-E3D8-4698-AB6E-112E691A95A4?tenantId=220534bf-8803-473e-b063-923d72bcef2a&fileType=xlsx&objectUrl=https%3A%2F%2Fnilu365.sharepoint.com%2Fsites%2FProject-NMBP13%2FShared%20Documents%2FGeneral%2FGlossary%20of%20key%20terms%2FGlossary%20of%20key%20terms.xlsx&baseUrl=https%3A%2F%2Fnilu365.sharepoint.com%2Fsites%2FProject-NMBP13&serviceName=teams&threadId=19:0d9c5a650fe643f2ab02f7d01959b320@thread.skype&groupId=59d85f53-db67-4347-82cd-bd09db845ca2">Excel spreadsheet</a> is normative and this document informative.
+    </p>
     <table>
       <tr>
         <td><b>Term</b></td><td><b>Definition<b></td><td><b>Superclass IRI<b></td>
@@ -143,6 +177,20 @@
       This work received funding from the European Union’s Horizon 2020 research and innovation programme via <a href="https://nanorigo.eu/">NanoRIGO</a> Project under grant agreement No 814530, <a href="https://riskgone.eu/">RiskGONE</a> Project under grant agreement No 814425, and via <a href="https://www.gov4nano.eu/">Gov4Nano</a> under grant agreement No 814401.
     </p>
   </section>
+  
+    <section class='informative'>
+    <h2>List of abbreviations</h2>
+    <dl>  
+      <dt>FP7</dt><dd>Framework Programme 7 (funding programme of the European Commission, 2007-2013)</dd>  
+      <dt>H2020</dt><dd>Horizon 2020 (funding programme of the European Commission, 2014-2020)</dd>  
+      <dt>ISO</dt><dd>International Organization for Standardization</dd>  
+      <dt>JM</dt><dd>Joint Milestone</dd>  
+      <dt>JRC</dt><dd>Joint Research Center (of the European Commission)</dd>  
+      <dt>OECD</dt><dd>Organisation for Economic Cooperation and Development</dd>  
+      <dt>REACH</dt><dd>Registration, Evaluation and Authorisation of Chemicals</dd>  
+    </dl>
+  </section>
+
 </body>
 
 </html>
