Copied in a good bit of terms and definitions

--- a/glossary/index.html
+++ b/glossary/index.html
@@ -147,20 +147,141 @@
     <p>
       This document does not replace the Excel spreadsheet glossary, but just a translation of it. The <a href="https://teams.microsoft.com/l/file/3ED241DB-E3D8-4698-AB6E-112E691A95A4?tenantId=220534bf-8803-473e-b063-923d72bcef2a&fileType=xlsx&objectUrl=https%3A%2F%2Fnilu365.sharepoint.com%2Fsites%2FProject-NMBP13%2FShared%20Documents%2FGeneral%2FGlossary%20of%20key%20terms%2FGlossary%20of%20key%20terms.xlsx&baseUrl=https%3A%2F%2Fnilu365.sharepoint.com%2Fsites%2FProject-NMBP13&serviceName=teams&threadId=19:0d9c5a650fe643f2ab02f7d01959b320@thread.skype&groupId=59d85f53-db67-4347-82cd-bd09db845ca2">Excel spreadsheet</a> is normative and this document informative.
     </p>
+    <h3>Data Management terms</h3>
     <table>
       <tr>
         <td><b>Term</b></td><td><b>Definition<b></td><td><b>Superclass IRI<b></td>
+      </tr>
+      <tr about="glossary:Annotation" typeof="owl:Class">
+        <td property="rdfs:label">Annotation</td>
+        <td property="obo:IAO_0000115">This is a broad data type and is used a placeholder for other, more specific types. A human-readable collection of information which (typically) is generated or collated by hand and which describes a biological entity, phenomena or associated primary (e.g. sequence or structural) data, as distinct from the primary data itself and computer-generated reports derived from it.</td>
+        <td><a property="owl:subClassOf" href=""></a></td>
+      </tr>
+      <tr about="glossary:" typeof="owl:Class">
+        <td property="rdfs:label">xxx</td>
+        <td property="obo:IAO_0000115">yyy</td>
+        <td><a property="owl:subClassOf" href="http://edamontology.org/data_2018">data_2018</a></td>
+      </tr>
+      <tr about="glossary:Anonymisation" typeof="owl:Class">
+        <td property="rdfs:label">Anonymisation</td>
+        <td property="obo:IAO_0000115">Process data in such a way that makes it hard to trace to the person which the data concerns.</td>
+        <td><a property="owl:subClassOf" href="http://edamontology.org/operation_3283">operation_3283</a></td>
+      </tr>
+      <tr about="glossary:Classification" typeof="owl:Class">
+        <td property="rdfs:label">Classification</td>
+        <td property="obo:IAO_0000115">yyy</td>
+        <td><a property="owl:subClassOf" href=""></a></td>
+      </tr>
+      <tr about="glossary:Cloud" typeof="owl:Class">
+        <td property="rdfs:label">Cloud</td>
+        <td property="obo:IAO_0000115">yyy</td>
+        <td><a property="owl:subClassOf" href=""></a></td>
+      </tr>
+      <tr about="glossary:Cloud_computing" typeof="owl:Class">
+        <td property="rdfs:label">Cloud computing</td>
+        <td property="obo:IAO_0000115">yyy</td>
+        <td><a property="owl:subClassOf" href=""></a></td>
+      </tr>
+      <tr about="glossary:Core_data" typeof="owl:Class">
+        <td property="rdfs:label">Core data</td>
+        <td property="obo:IAO_0000115">yyy</td>
+        <td><a property="owl:subClassOf" href=""></a></td>
+      </tr>
+      <tr about="glossary:Data_handling" typeof="owl:Class">
+        <td property="rdfs:label">Data handling</td>
+        <td property="obo:IAO_0000115">yyy</td>
+        <td><a property="owl:subClassOf" href=""></a></td>
+      </tr>
+      <tr about="glossary:Data_reference" typeof="owl:Class">
+        <td property="rdfs:label">Data reference</td>
+        <td property="obo:IAO_0000115">yyy</td>
+        <td><a property="owl:subClassOf" href=""></a></td>
       </tr>
       <tr about="glossary:Database" typeof="owl:Class">
         <td property="rdfs:label">Database</td>
         <td property="obo:IAO_0000115">A digital data archive typically based around a relational model but sometimes using an object-oriented,key-value,  tree or graph-based model.</td>
         <td><a property="owl:subClassOf" href="http://semanticscience.org/resource/SIO_000750">SIO_000750</a> ("database")</td>
       </tr>
-      <tr>
-        <td>xxx</td>
-        <td>yyy</td>
-        <td>xxx</td>
+      <tr about="glossary:Databank" typeof="owl:Class">
+        <td property="rdfs:label">Databank</td>
+        <td property="obo:IAO_0000115">yyy</td>
+        <td><a property="owl:subClassOf" href=""></a></td>
       </tr>
+      <tr about="glossary:Database_cross_mapping" typeof="owl:Class">
+        <td property="rdfs:label">Database cross-mapping</td>
+        <td property="obo:IAO_0000115">The cross-mapping is typically a table where each row is an accession number and each column is a database being cross-referenced. The cells give the accession number or identifier of the corresponding entry in a database. If a cell in the table is not filled then no mapping could be found for the database. Additional information might be given on version, date etc. A mapping of the accession numbers (or other database identifier) of entries between (typically) two biological or biomedical databases.</td>
+        <td><a property="owl:subClassOf" href="http://edamontology.org/data_0954">data_0954</a></td>
+      </tr>
+      <tr about="glossary:Format" typeof="owl:Class">
+        <td property="rdfs:label">Format</td>
+        <td property="obo:IAO_0000115">A defined way or layout of representing and structuring data in a computer file, blob, string, message, or elsewhere. The main focus in EDAM lies on formats as means of structuring data exchanged between different tools or resources. The serialisation, compression, or encoding of concrete data formats/models is not in scope of EDAM. Format 'is format of' Data.</td>
+        <td><a property="owl:subClassOf" href="http://edamontology.org/format_1915">format_1915</a></td>
+      </tr>
+      <tr about="glossary:Framework" typeof="owl:Class">
+        <td property="rdfs:label">Framework</td>
+        <td property="obo:IAO_0000115">A set of elements (e.g. ideas, best practices, regulatory provisions) organised in a conceptual manner, which constitute a frame of reference for a certain topic or issue.</td>
+        <td></td>
+      </tr>
+      <tr about="glossary:Harmonisation" typeof="owl:Class">
+        <td property="rdfs:label">Harmonisation</td>
+        <td property="obo:IAO_0000115">The term 'harmonisation' can be defined as the establishment of a common and coherent basis in a certain field/activity or for a certain scope.</td>
+        <td></td>
+      </tr>
+      <tr about="glossary:ID_list" typeof="owl:Class">
+        <td property="rdfs:label">ID list</td>
+        <td property="obo:IAO_0000115">A simple list of data identifiers (such as database accessions), possibly with additional basic information on the addressed data.</td>
+        <td><a property="owl:subClassOf" href="http://edamontology.org/data_2872">data_2872</a></td>
+      </tr>
+      <tr about="glossary:Identifier" typeof="owl:Class">
+        <td property="rdfs:label">Identifier</td>
+        <td property="obo:IAO_0000115">A text token, number or something else which identifies an entity, but which may not be persistent (stable) or unique (the same identifier may identify multiple things).</td>
+        <td><a property="owl:subClassOf" href="http://edamontology.org/data_0842">data_0842</a></td>
+      </tr>
+      <tr about="glossary:Identifier_with_metadata" typeof="owl:Class">
+        <td property="rdfs:label">Identifier with metadata</td>
+        <td property="obo:IAO_0000115">Basic information concerning an identifier of data (typically including the identifier itself). For example, a gene symbol with information concerning its provenance.</td>
+        <td><a property="owl:subClassOf" href="http://edamontology.org/data_2767">data_2767</a></td>
+      </tr>
+      <tr about="glossary:Model" typeof="owl:Class">
+        <td property="rdfs:label">Model</td>
+        <td property="obo:IAO_0000115">A mathematical model is the use of mathematical language to describe the behaviour of a system. A mathematical model usually describes a system by a set of variables and a set of equations that establish relationships between the variables. The variables represent some properties of the system, for example, measured system outputs often in the form of signals, timing data, counters, event occurrence (yes/no). The actual model is the set of functions that describe the relations between the different variables. [source: WordIQ online dictionary]</td>
+        <td><a property="owl:subClassOf" href="http://purl.org/obo/owl/SBO#SBO_0000004">SBO_0000004</a></td>
+      </tr>
+      <tr about="glossary:Ontology" typeof="owl:Class">
+        <td property="rdfs:label">Ontology</td>
+        <td property="obo:IAO_0000115">An ontology of biological or bioinformatics concepts and relations, a controlled vocabulary, structured glossary etc.</td>
+        <td><a property="owl:subClassOf" href="http://edamontology.org/data_0582">data_0582</a></td>
+      </tr>
+      <tr about="glossary:Parsing" typeof="owl:Class">
+        <td property="rdfs:label">Parsing</td>
+        <td property="obo:IAO_0000115">Parse, prepare or load a user-specified data file so that it is available for use.</td>
+        <td><a property="owl:subClassOf" href="http://edamontology.org/operation_1812">operation_1812</a></td>
+      </tr>
+      <tr about="glossary:Platform" typeof="owl:Class">
+        <td property="rdfs:label">Platform</td>
+        <td property="obo:IAO_0000115"></td>
+        <td><a property="owl:subClassOf" href=""></a></td>
+      </tr>
+      <tr about="glossary:Portal" typeof="owl:Class">
+        <td property="rdfs:label">Portal</td>
+        <td property="obo:IAO_0000115">A Resource that provides a point of access to information on the World Wide Web, presenting information from diverse sources in a unified way.</td>
+        <td><a property="owl:subClassOf" href="http://bioontology.org/ontologies/BiomedicalResourceOntology.owl#Portal">Portal</a></td>
+      </tr>
+      <tr about="glossary:Software" typeof="owl:Class">
+        <td property="rdfs:label">Software</td>
+        <td property="obo:IAO_0000115">A set of coded instructions, which a computer follows in processing data, performing an operation, or solving a logical problem, upon execution of the program.</td>
+        <td><a property="owl:subClassOf" href="http://ncicb.nci.nih.gov/xml/owl/EVS/Thesaurus.owl#C17146">C17146</a></td>
+      </tr>
+      <tr about="glossary:Tool" typeof="owl:Class">
+        <td property="rdfs:label">Tool</td>
+        <td property="obo:IAO_0000115">A bioinformatics package or tool, e.g. a standalone application or web service.</td>
+        <td><a property="owl:subClassOf" href="http://edamontology.org/data_0007">data_0007</a></td>
+      </tr>
+      <!-- tr about="glossary:" typeof="owl:Class">
+        <td property="rdfs:label">xxx</td>
+        <td property="obo:IAO_0000115">yyy</td>
+        <td><a property="owl:subClassOf" href=""></a></td>
+      </tr -->
     </table>
   </section>
   
