--- a/glossary/index.html
+++ b/glossary/index.html
@@ -118,7 +118,7 @@
     </p>
     <p>
       <img src=""></img><br />
-      <b>Figure 1</a>:  Screenshot of the initial Data management core group Glossary of terms, including the link to the existing Ontology term. 
+      <b>Figure 1</b>:  Screenshot of the initial Data management core group Glossary of terms, including the link to the existing Ontology term. 
     </p>
   </section>
   <section class='informative'>
@@ -150,7 +150,7 @@
     <h3>Data Management terms</h3>
     <table>
       <tr>
-        <td><b>Term</b></td><td><b>Definition<b></td><td><b>Superclass IRI<b></td>
+        <td><b>Term</b></td><td><b>Definition</b></td><td><b>Superclass IRI</b></td>
       </tr>
       <tr about="glossary:Annotation" typeof="owl:Class">
         <td property="rdfs:label">Annotation</td>
@@ -299,7 +299,7 @@
     </p>
   </section>
   
-    <section class='informative'>
+  <section class='informative'>
     <h2>List of abbreviations</h2>
     <dl>  
       <dt>FP7</dt><dd>Framework Programme 7 (funding programme of the European Commission, 2007-2013)</dd>  
