Added more terms

--- a/glossary/index.html
+++ b/glossary/index.html
@@ -283,6 +283,114 @@
         <td><a property="owl:subClassOf" href=""></a></td>
       </tr -->
     </table>
+    <h3>Council terms</h3>
+    <table>
+      <tr>
+        <td><b>Term</b></td><td><b>Definition</b></td><td><b>Superclass IRI</b></td>
+      </tr>
+      <!-- tr about="glossary:" typeof="owl:Class">
+        <td property="rdfs:label">xxx</td>
+        <td property="obo:IAO_0000115">yyy</td>
+        <td><a property="owl:subClassOf" href=""></a></td>
+      </tr -->
+    </table>
+    <h3>Modelling terms</h3>
+    <table>
+      <tr>
+        <td><b>Term</b></td><td><b>Definition</b></td><td><b>Superclass IRI</b></td>
+      </tr>
+      <tr about="glossary:ECETOC_Developmental_toxicology" typeof="owl:Class">
+        <td property="rdfs:label">ECETOC Developmental toxicology</td>
+        <td><a property="owl:subClassOf" href=""></a></td>
+      </tr>
+      <!-- tr about="glossary:" typeof="owl:Class">
+        <td property="rdfs:label">xxx</td>
+        <td property="obo:IAO_0000115">yyy</td>
+        <td><a property="owl:subClassOf" href=""></a></td>
+      </tr -->
+    </table>
+    <h3>Hazard terms</h3>
+    <table>
+      <tr>
+        <td><b>Term</b></td><td><b>Definition</b></td><td><b>Superclass IRI</b></td>
+      </tr>
+      <tr about="glossary:ECETOC_Developmental_toxicology" typeof="owl:Class">
+        <td property="rdfs:label">ECETOC Developmental toxicology</td>
+        <td><a property="owl:subClassOf" href=""></a></td>
+      </tr>
+      <!-- tr about="glossary:" typeof="owl:Class">
+        <td property="rdfs:label">xxx</td>
+        <td property="obo:IAO_0000115">yyy</td>
+        <td><a property="owl:subClassOf" href=""></a></td>
+      </tr -->
+    </table>
+    <h3>Hazard terms</h3>
+    <table>
+      <tr>
+        <td><b>Term</b></td><td><b>Definition</b></td><td><b>Superclass IRI</b></td>
+      </tr>
+      <tr about="glossary:ECETOC_Developmental_toxicology" typeof="owl:Class">
+        <td property="rdfs:label">ECETOC Developmental toxicology</td>
+        <td><a property="owl:subClassOf" href=""></a></td>
+      </tr>
+      <!-- tr about="glossary:" typeof="owl:Class">
+        <td property="rdfs:label">xxx</td>
+        <td property="obo:IAO_0000115">yyy</td>
+        <td><a property="owl:subClassOf" href=""></a></td>
+      </tr -->
+    </table>
+    <h3>Exposure terms</h3>
+    These terms originate from https://www.ecetoc.org/sr_19/preface/definitions/.
+    <table>
+      <tr>
+        <td><b>Term</b></td><td><b>Definition</b></td><td><b>Superclass IRI</b></td>
+      </tr>
+      <tr about="glossary:Adverse_Outcome" typeof="owl:Class">
+        <td property="rdfs:label">Adverse Outcome</td>
+        <td property="obo:IAO_0000115">A specialised type of key event (KE), measured at a level of organisation that corresponds with an established protection goal and/or is functionally equivalent to an apical endpoint measured as part of an accepted guideline test.</td>
+        <td></td>
+      </tr>
+      <tr about="glossary:Adverse_Outcome_Pathway" typeof="owl:Class">
+        <td property="rdfs:label">Adverse Outcome Pathway</td>
+        <td property="obo:IAO_0000115">A conceptual framework that organises existing knowledge concerning biologically plausible, and empirically supported, links between molecular-level perturbation of a biological system and an adverse outcome at a level of biological organisation of regulatory relevance.</td>
+        <td></td>
+      </tr>
+      <tr about="glossary:Apical_Endpoint" typeof="owl:Class">
+        <td property="rdfs:label">Apical Endpoint</td>
+        <td property="obo:IAO_0000115">Traditional, directly measured, adverse whole-organism outcomes of exposure in in vivo tests.</td>
+        <td></td>
+      </tr>
+      <tr about="glossary:Integrated_Approaches_to_Testing_and_Assessment" typeof="owl:Class">
+        <td property="rdfs:label">Integrated Approaches to Testing and Assessment</td>
+        <td property="obo:IAO_0000115">A structured approach that strategically integrates and weights all relevant data to inform regulatory decisions regarding potential hazard and/or risk and/or the need for further targeted testing and therefore optimising and potentially reducing the number of tests that need to be conducted.</td>
+        <td></td>
+      </tr>
+      <tr about="glossary:Key_Event" typeof="owl:Class">
+        <td property="rdfs:label">Key Event</td>
+        <td property="obo:IAO_0000115">A measurable change in biological state that is essential, but not necessarily sufficient, for the progression from a defined biological perturbation toward a specific adverse outcome.</td>
+        <td></td>
+      </tr>
+      <tr about="glossary:Key_Event_Relationship" typeof="owl:Class">
+        <td property="rdfs:label">Key Event Relationship</td>
+        <td property="obo:IAO_0000115">A scientifically-based relationship between a pair of KEs, identifying one as upstream and the other as downstream.</td>
+        <td></td>
+      </tr>
+      <tr about="glossary:Molecular_Initiating_Event" typeof="owl:Class">
+        <td property="rdfs:label">Molecular Initiating Event</td>
+        <td property="obo:IAO_0000115">A specialised type of KE, defined as the point where a chemical directly interacts with a biomolecule within an organism to create a perturbation that starts the AOP – as such, by definition, it occurs at the molecular level.</td>
+        <td></td>
+      </tr>
+      <tr about="glossary:Mode_Of_Action" typeof="owl:Class">
+        <td property="rdfs:label">Mode Of Action</td>
+        <td property="obo:IAO_0000115">A biologically plausible sequence of key events leading to an observed effect supported by robust experimental observations and mechanistic data. </td>
+        <td></td>
+      </tr>
+      <tr about="glossary:Toxicity_pathway" typeof="owl:Class">
+        <td property="rdfs:label">Toxicity pathway</td>
+        <td property="obo:IAO_0000115">Perturbation of a normal biochemical pathway from the molecular initiating event to the cellular effect.</td>
+        <td></td>
+      </tr>
+    </table>
   </section>
   
   <section class='informative'>
