--- a/glossary/index.html
+++ b/glossary/index.html
@@ -117,7 +117,7 @@
       Figure 1 shows a screen shot of the data management core group initial terms, their definitions and the link to the existing ontology term.
     </p>
     <p>
-      <img src=""></img><br />
+      <img src="figure1.png"></img><br />
       <b>Figure 1</b>:  Screenshot of the initial Data management core group Glossary of terms, including the link to the existing Ontology term. 
     </p>
   </section>
